# discord_user_manager_bot

./: .env  Cargo.toml  README.md
src/: commands.rs  main.rs
