[package]
name = "discord_user_manager_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
env_logger = "0.11.5"
poise = { version="0.6.1", git="https://github.com/serenity-rs/poise.git", branch="current" }
serenity = "0.12.2"
tokio = { version = "1.39.3", features = ["macros", "rt-multi-thread"] }
